# backend/src/main/kotlin/edu/agh/roomie/rest/endpoints/configureInitialRouting.kt
@@ -1,10 +1,9 @@
 package edu.agh.roomie.rest.endpoints
 
 import edu.agh.roomie.rest.Dependencies
-import edu.agh.roomie.rest.model.AuthResponse
-import edu.agh.roomie.rest.model.Departament
+import edu.agh.roomie.rest.model.AdditionalInfoRequest
+import edu.agh.roomie.rest.model.Departaments
 import edu.agh.roomie.rest.model.Hobby
-import edu.agh.roomie.rest.model.RegisterRequest
 import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.request.*
@@ -22,9 +21,19 @@ fun Application.configureInitialRouting() {
         call.respond(HttpStatusCode.OK, Departaments.all)
       }
 
-//      post("/additional-data"){
-//        val additionalInfoRequest = ca
-//      }
+      post("/additional-data") {
+        val additionalInfoRequest = call.receive<AdditionalInfoRequest>()
+        val userId = additionalInfoRequest.userId
+        userService.createUserAdditionalData(
+          userId,
+          additionalInfoRequest.info,
+          additionalInfoRequest.preferences,
+        )?.let {
+          call.respond(HttpStatusCode.OK, "User additional data updated successfully")
+        } ?: run {
+          call.respond(HttpStatusCode.BadRequest, "Failed to update user additional data")
+        }
+      }
     }
   }
 }
