# backend/src/main/kotlin/edu/agh/roomie/rest/model/Info.kt
@@ -5,12 +5,16 @@ import kotlinx.serialization.Serializable
 
 @Serializable
 data class Info(
+  val age: Int,
+  val departament: Departament,
   val description: String,
   val smoke: Boolean,
   val drink: Boolean,
 )
 
 fun InfoService.InfoEntity.toShared() = Info(
+  age = this.age,
+  departament = this.departament,
   description = this.description,
   smoke = this.smoke,
   drink = this.drink,
